--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         }
 
         /* Video Styles */
-        #video, #capturedImage {
+        #video {
             border: 4px solid var(--primary-color);
             border-radius: 15px;
             width: 100%;
@@ -184,15 +184,7 @@
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
             transition: opacity 0.5s ease, transform 0.3s ease;
             object-fit: cover;
-        }
-
-        #video {
             display: none; /* Hide video initially */
-        }
-
-        #capturedImage {
-            display: none; /* Ẩn ban đầu */
-            opacity: 0;
         }
 
         /* Cải thiện thiết kế Overlay */
@@ -679,8 +671,8 @@
             <video id="video" autoplay playsinline aria-label="Video từ camera"></video>
             <div class="overlay"></div>
         </div>
-        <img id="capturedImage" alt="Ảnh đã chụp">
-        <canvas id="canvas" style="display: none;"></canvas>
+        <img id="capturedImage" alt="Ảnh đã chụp" style="display: none;"/>
+        <!-- Removed the canvas element -->
 
         <div class="button-container">
             <button id="instructionButton" aria-label="Hướng Dẫn">Hướng Dẫn</button>
@@ -769,7 +761,6 @@
         // Các phần tử DOM
         const video = document.getElementById('video');
         const placeholderImage = document.getElementById('placeholderImage');
-        const canvas = document.getElementById('canvas');
         const captureButton = document.getElementById('captureButton');
         const uploadButton = document.getElementById('uploadButton');
         const uploadInput = document.getElementById('uploadInput'); // Hidden file input
@@ -925,13 +916,19 @@
         /**
          * Hàm kiểm tra độ mờ của hình ảnh
          * Sử dụng phương pháp Variance of Laplacian
-         * @param {HTMLCanvasElement} canvasElement - Canvas chứa hình ảnh
+         * @param {HTMLImageElement} imageElement - Hình ảnh cần kiểm tra
          * @returns {Promise<number>} - Giá trị variance
          */
-        async function checkImageBlurriness(canvasElement) {
+        async function checkImageBlurriness(imageElement) {
             return new Promise((resolve) => {
-                const ctx = canvasElement.getContext('2d');
-                const imageData = ctx.getImageData(0, 0, canvasElement.width, canvasElement.height);
+                const canvas = document.createElement('canvas');
+                const ctx = canvas.getContext('2d');
+                const width = imageElement.width;
+                const height = imageElement.height;
+                canvas.width = width;
+                canvas.height = height;
+                ctx.drawImage(imageElement, 0, 0, width, height);
+                const imageData = ctx.getImageData(0, 0, width, height);
                 const data = imageData.data;
 
                 // Convert to grayscale
@@ -943,8 +940,6 @@
 
                 // Calculate Laplacian
                 let laplacian = [];
-                const width = canvasElement.width;
-                const height = canvasElement.height;
                 for (let y = 1; y < height - 1; y++) {
                     for (let x = 1; x < width - 1; x++) {
                         const idx = y * width + x;
@@ -964,7 +959,7 @@
         }
 
         /**
-         * Hàm chụp ảnh từ video
+         * Hàm chụp ảnh từ video sử dụng Image Capture API
          */
         async function capturePhoto() {
             if (isProcessing) return;
@@ -994,65 +989,37 @@
                 loadingPrediction.style.display = 'flex';
 
                 try {
-                    // Kiểm tra xem video đã sẵn sàng chưa
-                    if (video.readyState < 3) { // HAVE_CURRENT_DATA = 2, HAVE_FUTURE_DATA = 3
-                        await new Promise((resolve) => {
-                            video.oncanplay = () => {
-                                resolve();
-                            };
-                        });
-                    }
+                    const track = stream.getVideoTracks()[0];
+                    const imageCapture = new ImageCapture(track);
+                    const blob = await imageCapture.takePhoto();
+                    const imageURL = URL.createObjectURL(blob);
 
-                    const context = canvas.getContext('2d');
-                    
-                    // Bật image smoothing và thiết lập chất lượng cao
-                    context.imageSmoothingEnabled = true;
-                    context.imageSmoothingQuality = 'high';
+                    // Tạo hình ảnh để kiểm tra độ mờ
+                    const img = new Image();
+                    img.src = imageURL;
+                    img.onload = async () => {
+                        const variance = await checkImageBlurriness(img);
+                        const blurThreshold = 100; // Ngưỡng tùy chỉnh, có thể điều chỉnh
+                        if (variance < blurThreshold) {
+                            alert("Ảnh bị mờ. Vui lòng chụp lại với ánh sáng tốt và giữ điện thoại ổn định.");
+                            throw new Error("Ảnh bị mờ.");
+                        }
 
-                    const videoWidth = video.videoWidth;
-                    const videoHeight = video.videoHeight;
+                        capturedImage.src = imageURL;
+                        capturedImage.style.display = 'block';
+                        capturedImage.style.opacity = 1;
+                        video.style.display = 'none';
+                        overlay.style.display = 'none';
+                        downloadButton.style.display = 'inline-block';
+                        retakeButton.style.display = 'inline-block';
+                        predictionResult.innerHTML = "";
+                        signMeaning.textContent = "";
+                        signMeaning.style.display = 'none'; // Ẩn signMeaning khi chụp lại
+                        readButton.style.display = 'none'; // Ẩn nút đọc ban đầu
+                        quizButton.style.display = 'none'; // Ẩn nút kiểm tra ban đầu
 
-                    if (videoWidth === 0 || videoHeight === 0) {
-                        throw new Error("Video chưa sẵn sàng.");
-                    }
-
-                    // Kích thước và vị trí của overlay (60% chiều rộng và chiều cao)
-                    const overlayWidth = videoWidth * 0.6;
-                    const overlayHeight = videoHeight * 0.6;
-                    const sx = (videoWidth - overlayWidth) / 2;
-                    const sy = (videoHeight - overlayHeight) / 2;
-
-                    // Thiết lập kích thước canvas thành 224x224
-                    const targetSize = 224;
-                    canvas.width = targetSize;
-                    canvas.height = targetSize;
-
-                    // Vẽ phần ảnh trong khu vực overlay vào canvas với kích thước 224x224
-                    context.drawImage(video, sx, sy, overlayWidth, overlayHeight, 0, 0, targetSize, targetSize);
-
-                    // Kiểm tra độ mờ của hình ảnh
-                    const variance = await checkImageBlurriness(canvas);
-                    const blurThreshold = 100; // Ngưỡng tùy chỉnh, có thể điều chỉnh
-                    if (variance < blurThreshold) {
-                        alert("Ảnh bị mờ. Vui lòng chụp lại với ánh sáng tốt và giữ điện thoại ổn định.");
-                        throw new Error("Ảnh bị mờ.");
-                    }
-
-                    const imageDataURL = canvas.toDataURL('image/png');
-                    capturedImage.src = imageDataURL;
-                    capturedImage.style.display = 'block';
-                    capturedImage.style.opacity = 1;
-                    video.style.display = 'none';
-                    overlay.style.display = 'none';
-                    downloadButton.style.display = 'inline-block';
-                    retakeButton.style.display = 'inline-block';
-                    predictionResult.innerHTML = "";
-                    signMeaning.textContent = "";
-                    signMeaning.style.display = 'none'; // Ẩn signMeaning khi chụp lại
-                    readButton.style.display = 'none'; // Ẩn nút đọc ban đầu
-                    quizButton.style.display = 'none'; // Ẩn nút kiểm tra ban đầu
-
-                    await predictImage();
+                        await predictImage(imageURL);
+                    };
                 } catch (error) {
                     console.error("Lỗi khi chụp ảnh: ", error);
                     // Nếu lỗi là do độ mờ, không cần hiển thị thêm thông báo
@@ -1178,8 +1145,9 @@
 
         /**
          * Hàm thực hiện dự đoán hình ảnh
+         * @param {string} imageURL - URL của hình ảnh cần dự đoán
          */
-        async function predictImage() {
+        async function predictImage(imageURL) {
             if (!model) {
                 predictionResult.textContent = "Mô hình chưa được tải. Vui lòng thử lại sau.";
                 loadingPrediction.style.display = 'none';
@@ -1193,51 +1161,58 @@
             }
 
             try {
-                // Sử dụng tf.tidy để giải phóng bộ nhớ sau khi thực hiện dự đoán
-                tf.tidy(() => {
-                    // Chuyển đổi canvas thành tensor
-                    const img = tf.browser.fromPixels(canvas);
-                    // Bỏ bước resize vì canvas đã được thiết lập đúng kích thước
-                    const normalized = img.div(255.0).expandDims();
-
-                    // Thực hiện dự đoán
-                    const predictions = model.predict(normalized);
-                    const data = predictions.dataSync();
-
-                    // Tìm lớp có xác suất cao nhất
-                    let maxProb = -1;
-                    let maxIndex = -1;
-                    for (let i = 0; i < data.length; i++) {
-                        if (data[i] > maxProb) {
-                            maxProb = data[i];
-                            maxIndex = i;
-                        }
-                    }
-
-                    if (maxIndex !== -1 && window.labels) {
-                        const predictedClass = window.labels[maxIndex];
-                        predictionResult.innerHTML = `<span style="color: var(--primary-color);">Kết quả: ${predictedClass} (${(maxProb * 100).toFixed(2)}%)</span>`;
-                        const signCode = predictedClass.substring(0, 5).toUpperCase();
-                        if (signMeanings.hasOwnProperty(signCode)) {
-                            const meaningText = `Ý nghĩa: ${signMeanings[signCode]}`;
-                            signMeaning.textContent = meaningText;
-                            signMeaning.style.display = 'block'; // Hiển thị phần signMeaning
-                            readButton.style.display = 'inline-block';
-                            quizButton.style.display = 'inline-block';
-                        } else {
-                            signMeaning.textContent = "Ý nghĩa: Đây là một hình ảnh không phải là hình biển báo giao thông. Bạn hãy nhấn vào nút Chụp lại hoặc nút Tải ảnh lên để kiểm tra. Lưu ý để kết quả nhận diện đúng cần đảm bảo chất lượng ảnh chụp rõ nét, đảm bảo kích thước.";
-                            signMeaning.style.display = 'block'; // Hiển thị phần signMeaning
-                            readButton.style.display = 'inline-block';
-                            quizButton.style.display = 'inline-block';
-                        }
-                    } else {
-                        predictionResult.innerHTML = `<span style="color: var(--error-color);">Không có kết quả nhận diện.</span>`;
-                        signMeaning.textContent = "";
-                        signMeaning.style.display = 'none'; // Ẩn phần signMeaning
-                        readButton.style.display = 'none';
-                        quizButton.style.display = 'none';
-                    }
+                // Tạo một hình ảnh mới từ URL
+                const img = new Image();
+                img.src = imageURL;
+                await new Promise((resolve, reject) => {
+                    img.onload = () => resolve();
+                    img.onerror = () => reject(new Error("Không thể tải hình ảnh cho dự đoán."));
                 });
+
+                // Sử dụng tf.browser.fromPixels để chuyển đổi hình ảnh thành tensor
+                const imgTensor = tf.browser.fromPixels(img)
+                    .resizeNearestNeighbor([224, 224]) // Đảm bảo kích thước phù hợp với mô hình
+                    .toFloat()
+                    .div(tf.scalar(255))
+                    .expandDims();
+
+                // Thực hiện dự đoán
+                const predictions = model.predict(imgTensor);
+                const data = predictions.dataSync();
+
+                // Tìm lớp có xác suất cao nhất
+                let maxProb = -1;
+                let maxIndex = -1;
+                for (let i = 0; i < data.length; i++) {
+                    if (data[i] > maxProb) {
+                        maxProb = data[i];
+                        maxIndex = i;
+                    }
+                }
+
+                if (maxIndex !== -1 && window.labels) {
+                    const predictedClass = window.labels[maxIndex];
+                    predictionResult.innerHTML = `<span style="color: var(--primary-color);">Kết quả: ${predictedClass} (${(maxProb * 100).toFixed(2)}%)</span>`;
+                    const signCode = predictedClass.substring(0, 5).toUpperCase();
+                    if (signMeanings.hasOwnProperty(signCode)) {
+                        const meaningText = `Ý nghĩa: ${signMeanings[signCode]}`;
+                        signMeaning.textContent = meaningText;
+                        signMeaning.style.display = 'block'; // Hiển thị phần signMeaning
+                        readButton.style.display = 'inline-block';
+                        quizButton.style.display = 'inline-block';
+                    } else {
+                        signMeaning.textContent = "Ý nghĩa: Đây là một hình ảnh không phải là hình biển báo giao thông. Bạn hãy nhấn vào nút Chụp lại hoặc nút Tải ảnh lên để kiểm tra. Lưu ý để kết quả nhận diện đúng cần đảm bảo chất lượng ảnh chụp rõ nét, đảm bảo kích thước.";
+                        signMeaning.style.display = 'block'; // Hiển thị phần signMeaning
+                        readButton.style.display = 'inline-block';
+                        quizButton.style.display = 'inline-block';
+                    }
+                } else {
+                    predictionResult.innerHTML = `<span style="color: var(--error-color);">Không có kết quả nhận diện.</span>`;
+                    signMeaning.textContent = "";
+                    signMeaning.style.display = 'none'; // Ẩn phần signMeaning
+                    readButton.style.display = 'none';
+                    quizButton.style.display = 'none';
+                }
             } catch (err) {
                 console.error("Lỗi khi nhận diện hình ảnh: ", err);
                 predictionResult.innerHTML = `<span style="color: var(--error-color);">Lỗi khi nhận diện hình ảnh.</span>`;
@@ -1314,7 +1289,6 @@
                 reader.onload = async function(e) {
                     capturedImage.src = e.target.result;
                     capturedImage.style.display = 'block';
-                    capturedImage.style.opacity = 1;
                     // Hide video and placeholder image
                     video.style.display = 'none';
                     placeholderImage.style.display = 'none';
@@ -1327,46 +1301,11 @@
                     readButton.style.display = 'none'; // Ẩn nút đọc ban đầu
                     quizButton.style.display = 'none'; // Ẩn nút kiểm tra ban đầu
 
-                    // Vẽ ảnh lên canvas để dự đoán
+                    // Tạo hình ảnh để kiểm tra độ mờ
                     const img = new Image();
                     img.src = e.target.result;
                     img.onload = async () => {
-                        const context = canvas.getContext('2d');
-                        
-                        // Bật image smoothing và thiết lập chất lượng cao
-                        context.imageSmoothingEnabled = true;
-                        context.imageSmoothingQuality = 'high';
-
-                        // Thiết lập kích thước canvas thành 224x224
-                        const targetSize = 224;
-                        canvas.width = targetSize;
-                        canvas.height = targetSize;
-
-                        // Tính toán tỷ lệ để giữ nguyên tỉ lệ ảnh khi vẽ vào canvas
-                        const aspectRatio = img.width / img.height;
-                        let drawWidth, drawHeight, dx, dy;
-
-                        if (aspectRatio > 1) {
-                            // Ngang hơn dọc
-                            drawWidth = targetSize;
-                            drawHeight = targetSize / aspectRatio;
-                            dx = 0;
-                            dy = (targetSize - drawHeight) / 2;
-                        } else {
-                            // Dọc hơn ngang hoặc tỉ lệ bằng
-                            drawHeight = targetSize;
-                            drawWidth = targetSize * aspectRatio;
-                            dy = 0;
-                            dx = (targetSize - drawWidth) / 2;
-                        }
-
-                        // Vẽ ảnh vào canvas với kích thước 224x224 và giữ tỷ lệ
-                        context.fillStyle = '#ffffff'; // Nền trắng nếu có khoảng trống
-                        context.fillRect(0, 0, targetSize, targetSize);
-                        context.drawImage(img, dx, dy, drawWidth, drawHeight);
-
-                        // Kiểm tra độ mờ của hình ảnh
-                        const variance = await checkImageBlurriness(canvas);
+                        const variance = await checkImageBlurriness(img);
                         const blurThreshold = 100; // Ngưỡng tùy chỉnh, có thể điều chỉnh
                         if (variance < blurThreshold) {
                             alert("Ảnh bị mờ. Vui lòng tải lên ảnh rõ nét với ánh sáng tốt và giữ điện thoại ổn định.");
@@ -1374,7 +1313,7 @@
                             return;
                         }
 
-                        await predictImage();
+                        await predictImage(e.target.result);
                     };
                 };
                 reader.readAsDataURL(file);
